// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rejects when all hosts are used 1`] = `
[Error: There are no hosts remaining for this app. 

You can retry this search, and it will try the hosts again. 

appID: the_host_app

see: https://alg.li/client#no-hosts-remaining]
`;

exports[`rejects when all timeouts are reached 1`] = `
[Error: There are no hosts remaining for this app. 

You can retry this search, and it will try the hosts again. 

appID: the_timeout_app

see: https://alg.li/client#no-hosts-remaining]
`;

exports[`rejects when all timeouts are reached 2`] = `
Array [
  30000,
  60000,
  90000,
  120000,
  30000,
]
`;

exports[`requires the right arguments 1`] = `"appID is required and should be a string, received \\"\\""`;

exports[`requires the right arguments 2`] = `"apiKey is required and should be a string, received undefined"`;

exports[`requires the right arguments 3`] = `"httpRequester is required and should be a function, received [object Object]"`;

exports[`second try after a timeout has increments the timeout (read) 1`] = `
Array [
  2000,
  4000,
]
`;

exports[`second try after a timeout has increments the timeout (write) 1`] = `
Array [
  30000,
  60000,
]
`;

exports[`two instances of createRequester share the same host index 1`] = `
Array [
  "the_same_app-dsn.algolia.net",
  "the_same_app-1.algolianet.com",
  "the_same_app-1.algolia.net",
]
`;

exports[`uses a different host when the request needs to be retried 1`] = `
Array [
  "the_crazy_app-dsn.algolia.net",
  "the_crazy_app-1.algolianet.com",
]
`;

exports[`uses the "up" host on second request when first fails 1`] = `
Array [
  "the_crazy_app-dsn.algolia.net",
  "the_crazy_app-1.algolianet.com",
  "the_crazy_app-1.algolianet.com",
]
`;
